2007-11-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	Move rc file and argp parsing into separate abstract layers.
	
	* include/mailutils/gocs.h, include/mailutils/pam.h,
	include/mailutils/radius.h, include/mailutils/syslog.h: New files
	* lib/argpinit.c, lib/muinit.c, lib/muinit.h: New files.
	* libsieve/conf.c: New file.

	* libcfg: New directory
	* libcfg/libcfg.h, libcfg/auth.c, libcfg/common.c, libcfg/init.c,
	libcfg/gsasl.c, libcfg/pam.c, libcfg/radius.c, libcfg/sieve.c,
	libcfg/sql.c, libcfg/tls.c, libcfg/virtdomain.c,
	libcfg/.cvsignore: New files.

	* libargp: New directory
	* libargp/auth.c, libargp/cmdline.h, libargp/common.c,
	libargp/gsasl.c, libargp/mu_argp.h, libargp/mu_argp.c,
	libargp/pam.c, libargp/radius.c, libargp/sieve.c, libargp/sql.c,
	libargp/tls.c, libargp/virtdomain.c, libargp/.cvsignore: New
	files.
	
	* mailbox/.cvsignore: Add cfg_parser.c and cfg_parser.h.
	* mailbox/gocs.c: New file.
	* Makefile.am (SUBDIRS): Add libargp and libcfg.
	* configure.ac (MU_APP_LIBRARIES): New variable
	(MU_COMMON_INCLUDES): add libargp and libcfg
	(AC_CONFIG_FILES): Add libargp and libcfg.

	* auth/gsasl.c, auth/pam.c, auth/radius.c, auth/sql.c, auth/sql.h,
	auth/tls.c, auth/virtual.c, comsat/comsat.h, frm/frm.h,
	guimb/guimb.h, imap4d/imap4d.h, include/mailutils/gsasl.h,
	include/mailutils/libsieve.h, include/mailutils/mailutils.h,
	include/mailutils/mu_auth.h, include/mailutils/tls.h,
	include/mailutils/sql.h, maidag/maidag.h, mail/mail.h,
	mail.local/mail.local.h, mailbox/daemon.c, mailbox/system.c,
	mh/mh_argp.c, mh/mh_getopt.h, pop3d/pop3d.h,
	readmsg/readmsg.h: Remove argp stuff 

	* comsat/comsat.c, config/mailutils-config.c, dotlock/dotlock.c,
	examples/muauth.c, examples/muemail.c, frm/frm.c, frm/from.c,
	guimb/main.c, imap4d/idle.c, imap4d/imap4d.c, imap4d/util.c,
	imap4d/version.c, maidag/lmtp.c, maidag/maidag.c,
	maidag/mailquota.c, mail/mail.c, mail/send.c, mail/version.c,
	mail.local/mailquota.c, mail.local/main.c,