@@ -42,6 +42,25 @@ struct mu_sql_module_config
   mu_assoc_t field_map;
 };
 
+/* FIXME: Should not be here, but needed for several other sources
+   (imap4d/auth_gsasl.c, for instance) */
+struct mu_internal_sql_config
+{
+  int interface;
+  char *getpwnam_query;
+  char *getpass_query;
+  char *getpwuid_query;
+  char *host; 
+  char *user;
+  char *passwd;
+  char *db;
+  int port;
+  enum mu_password_type password_type;
+  mu_assoc_t field_map;
+};
+
+extern struct mu_internal_sql_config mu_sql_module_config;
+
 /* Loadable Modules Support */
 #define __s_cat2__(a,b) a ## b 
 #define __s_cat3__(a,b,c) a ## b ## c
